tooling/nargo_cli/tests/snapshots/execution_success/simple_mut/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) -> pub Field {
    let mut y: Field = 2;
    y = y + x;
    y
}
