tooling/nargo_cli/tests/snapshots/execution_success/simple_mut/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[simple_mut] Circuit output: 0x03
